--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -1,5 +1,111 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
+
 .contact-container{
-    height: 10vh;
+    height: 90vh;
     width: 100vw;
-    background-color: rgb(193, 219, 253);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Karla;
 }
+
+.icon-container{
+    display: flex;
+    height: 50px;
+    width: 500px;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.icon-container img{
+    -webkit-animation: roll-in-left 1s ease-out both;
+	        animation: roll-in-left 1s ease-out both;
+}
+
+.contact-container h1{
+    /* transform: rotate(270deg); */
+    position: absolute;
+    bottom: 0;
+    font-size: 40px;
+    font-weight: 300;
+    -webkit-animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+      animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+      animation-delay: 0.5s;
+}
+
+.contact-container img:hover{
+    cursor: pointer;
+}
+
+@-webkit-keyframes roll-in-left {
+  0% {
+    -webkit-transform: translateX(-800px) rotate(-540deg);
+            transform: translateX(-800px) rotate(-540deg);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0) rotate(0deg);
+            transform: translateX(0) rotate(0deg);
+    opacity: 1;
+  }
+}
+@keyframes roll-in-left {
+  0% {
+    -webkit-transform: translateX(-800px) rotate(-540deg);
+            transform: translateX(-800px) rotate(-540deg);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateX(0) rotate(0deg);
+            transform: translateX(0) rotate(0deg);
+    opacity: 1;
+  }
+}
+
+ @-webkit-keyframes slide-in-bottom {
+    0% {
+      -webkit-transform: translateY(1000px);
+              transform: translateY(1000px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      opacity: 1;
+    }
+  }
+  @keyframes slide-in-bottom {
+    0% {
+      -webkit-transform: translateY(1000px);
+              transform: translateY(1000px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateY(0);
+              transform: translateY(0);
+      opacity: 1;
+    }
+  }
+
+  @media(max-width: 500px){
+
+    .contact-container{
+      display: flex;
+      align-items: center;
+    }
+
+    .icon-container{
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      width: 210px;
+      height: 200px;
+    }
+
+    .contact-container h1{
+      font-size: 30px;
+      font-weight: 700;
+    }
+
+  }
+  
