--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
 
 .about-container{
-    height: 100vh;
+    height: 90vh;
     width: 100vw;
     padding: 25px 0 0 75px;
     animation-name: about-page-load;
@@ -35,6 +35,16 @@
     color: rgb(90,86,214);
 }
 
+#view-my-work{
+    position: absolute;
+    color: orange;
+    margin-top: 30px;
+}
+
+#view-my-work{
+    cursor: pointer;
+}
+
 @keyframes about-page-load{
     0% {opacity: 0;}
     100% {opacity: 1;}
@@ -44,7 +54,7 @@
     .about-container{
         height: auto;
         width: 100vw;
-        padding-left: 10px;
+        padding-left: 5px;
         font-family: Karla;
         animation-name: about-page-load;
         animation-duration: 4s;
@@ -68,6 +78,13 @@
 
     .about-bio a {
         font-weight: 700;
+    }
+
+    #view-my-work{
+        text-align: center;
+        width: 100vw;
+        margin-top: -0px;
+        font-size: 20px;
     }
 
     @keyframes about-page-load{
