--- a/src/Components/Landing/landing.css
+++ b/src/Components/Landing/landing.css
@@ -10,12 +10,13 @@
 }
 
 .landing-portrait{
-    height: 60vh;
-    width: 300px;
-    /* background-color: aliceblue; */
+    height: 70vh;
+    width: 400px;
+    background-color: aliceblue;
     background-image: url('./IMG_5638.JPG');
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
+    background-position: center;
     margin-left: 50;
     margin-top: 222px;
     animation-name: image;
@@ -25,7 +26,7 @@
 .landing-about-container{
     height: auto;
     width: 60vw;
-    margin-right: 15px;
+    margin-right: -25px;
     margin-top: -80px;
     display: flex;
     flex-direction: column;
@@ -57,27 +58,19 @@
     width: 150px;
     margin-left: 170px;
     font-weight: 500;
+  }
+
+  #landing-learn-more:hover{
+    cursor: pointer;
+    color: orange;
+  }
+  
+  #landing-learn-more:active{
+    cursor: pointer;
+    -webkit-animation: slide-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+      animation: slide-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
-#landing-learn-more:hover {
-    position: relative;
-    cursor: pointer;
-    
-  }
-  #landing-learn-more:hover::after {
-    position: absolute;
-    content: ' ';
-    top: 50%;
-    left: 0;
-    width: 100%;
-    height: 2px;
-    background: aliceblue;
-    animation-name: strike;
-    animation-duration: 2s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-fill-mode: forwards; 
-  }
 
 a {
     text-decoration: none;
@@ -115,6 +108,28 @@ a {
       50%  {width: 50%;}
       100% { width: 100%; }
     }
+
+    @-webkit-keyframes slide-right {
+      0% {
+        -webkit-transform: translateX(0);
+                transform: translateX(0);
+      }
+      100% {
+        -webkit-transform: translateX(100px);
+                transform: translateX(100px);
+      }
+    }
+    @keyframes slide-right {
+      0% {
+        -webkit-transform: translateX(0);
+                transform: translateX(0);
+      }
+      100% {
+        -webkit-transform: translateX(100px);
+                transform: translateX(100px);
+      }
+    }
+    
 
     @keyframes image{
       0%   { opacity : 0; }
