--- a/src/Components/Landing/landing.css
+++ b/src/Components/Landing/landing.css
@@ -11,14 +11,14 @@
 
 .landing-portrait{
     height: 70vh;
-    width: 400px;
+    width: 550px;
     background-color: aliceblue;
     background-image: url('./IMG_5638.JPG');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    margin-left: 50;
-    margin-top: 222px;
+    margin-right: 50;
+    margin-top: 320px;
     animation-name: image;
     animation-duration:4s;
 }
@@ -29,6 +29,7 @@
     margin-right: -25px;
     margin-top: -80px;
     display: flex;
+    /* text-align: start; */
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
@@ -38,11 +39,11 @@
         animation: slide-in-left 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 .landing-name{
-    font-size: 40px;
+    font-size: 60px;
 }
 
 .landing-title{
-    font-size: 60px;
+    font-size: 80px;
     height: 0px;
     margin-top: -25px;
 }
@@ -52,12 +53,15 @@
     width: 40vw;
     margin-top: 30px;
     flex-wrap: wrap; 
+    margin-right: 50px;
+    font-size: 25px;
 }
 
 #landing-learn-more{
-    width: 150px;
-    margin-left: 170px;
+    width: 200px;
+    margin-left: 250px;
     font-weight: 500;
+    font-size: 25px;
   }
 
   #landing-learn-more:hover{
@@ -152,9 +156,14 @@ a {
             height: 400px;
         }
 
+        .landing-name{
+          font-size: 50px;
+        }
+
         .landing-title{
-            font-size: 40px;
-            padding-top: 30px;
+            font-size: 35px;
+            /* padding-top: 30px; */
+            padding-bottom: 50px;
         }
 
         .landing-about{
@@ -166,7 +175,8 @@ a {
             position: absolute;
             font-size: 20px;
             width: 100vw;
-            margin-right: 175px;
+            /* margin-right: 175px; */
+            margin-left: -20px;
             color: orange;
             bottom: 0;
             z-index: 1;
