--- a/src/Components/Landing/landing.css
+++ b/src/Components/Landing/landing.css
@@ -1,252 +1,299 @@
-@import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Karla&display=swap");
 
-.landing-container{
-    height: 90vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    font-family: Karla;
+.landing-container {
+  height: 90vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  font-family: Karla;
 }
 
-.landing-portrait{
-    height: 70vh;
-    width: 550px;
-    background-color: aliceblue;
-    background-image: url('./IMG_5638.JPG');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    margin-right: 50;
-    margin-top: 320px;
-    animation-name: image;
-    animation-duration:4s;
+.landing-portrait {
+  height: 70vh;
+  width: 550px;
+  background-color: aliceblue;
+  background-image: url("./IMG_5638.JPG");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin-right: 50;
+  margin-top: 320px;
+  animation-name: image;
+  animation-duration: 4s;
 }
 
-.landing-about-container{
-    height: auto;
-    width: 60vw;
-    margin-right: -25px;
-    margin-top: -80px;
-    display: flex;
-    /* text-align: start; */
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    background-color: white;
-    flex-wrap: wrap;
-    -webkit-animation: slide-in-left 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-        animation: slide-in-left 2s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+.landing-about-container {
+  height: auto;
+  width: 60vw;
+  margin-right: -25px;
+  margin-top: -80px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  background-color: white;
+  flex-wrap: wrap;
+  -webkit-animation: slide-in-left 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-in-left 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
-.landing-name{
-    font-size: 60px;
-}
-
-.landing-title{
-    font-size: 80px;
-    height: 0px;
-    margin-top: -25px;
+.landing-name {
+  font-size: 60px;
 }
 
-.landing-about{
-    height: auto;
-    width: 40vw;
-    margin-top: 30px;
-    flex-wrap: wrap; 
-    margin-right: 50px;
-    font-size: 25px;
+.landing-title {
+  font-size: 80px;
+  height: 0px;
+  margin-top: -25px;
 }
 
-#landing-learn-more{
-    width: 200px;
-    margin-left: 250px;
-    font-weight: 500;
-    font-size: 25px;
-  }
-
-  #landing-learn-more:hover{
-    cursor: pointer;
-    color: orange;
-  }
-  
-  #landing-learn-more:active{
-    cursor: pointer;
-    -webkit-animation: slide-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-      animation: slide-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+.landing-about {
+  height: auto;
+  width: 40vw;
+  margin-top: 30px;
+  flex-wrap: wrap;
+  margin-right: 50px;
+  font-size: 25px;
 }
 
+#landing-learn-more {
+  width: 200px;
+  margin-left: 250px;
+  font-weight: 500;
+  font-size: 25px;
+}
+
+#landing-learn-more:hover {
+  cursor: pointer;
+  color: orange;
+}
+
+#landing-learn-more:active {
+  cursor: pointer;
+  -webkit-animation: slide-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-right 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
 
 a {
-    text-decoration: none;
-    color: orange;
+  text-decoration: none;
+  color: orange;
 }
-  
+
 @-webkit-keyframes slide-in-left {
   0% {
     -webkit-transform: translateX(-1000px);
-            transform: translateX(-1000px);
+    transform: translateX(-1000px);
     opacity: 0;
   }
   100% {
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
     opacity: 1;
   }
 }
 @keyframes slide-in-left {
   0% {
     -webkit-transform: translateX(-1000px);
-            transform: translateX(-1000px);
+    transform: translateX(-1000px);
     opacity: 0;
   }
   100% {
     -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
     opacity: 1;
   }
 }
 
-  @keyframes strike{
-      0%   { width : 0; }
-      25%  {width: 25%;}
-      50%  {width: 50%;}
-      100% { width: 100%; }
+@keyframes strike {
+  0% {
+    width: 0;
+  }
+  25% {
+    width: 25%;
+  }
+  50% {
+    width: 50%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@-webkit-keyframes slide-right {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(100px);
+    transform: translateX(100px);
+  }
+}
+@keyframes slide-right {
+  0% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(100px);
+    transform: translateX(100px);
+  }
+}
+
+@keyframes image {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@media (max-width: 500px) {
+  .landing-container {
+    display: block;
+    height: 70vh;
+    width: 100vw;
+  }
+
+  .landing-about-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 400px;
+    -webkit-animation: slide-in-left 2s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+      both;
+    animation: slide-in-left 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  }
+
+  .landing-name {
+    font-size: 50px;
+  }
+
+  .landing-title {
+    font-size: 35px;
+    padding-bottom: 50px;
+  }
+
+  .landing-about {
+    width: 300px;
+    display: none;
+  }
+
+  #landing-learn-more {
+    position: absolute;
+    font-size: 20px;
+    width: 100vw;
+    margin-left: -20px;
+    color: orange;
+    bottom: 0;
+    z-index: 1;
+  }
+
+  .landing-portrait {
+    height: 500px;
+    width: 325px;
+    padding-left: 50px;
+    background-image: url("./IMG_5638.JPG");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    bottom: 0;
+    z-index: 0;
+    animation-name: image;
+    animation-duration: 4s;
+  }
+
+  .arrowSliding {
+    position: absolute;
+    margin-left: 30px;
+    -webkit-animation: slide 4s linear infinite;
+    animation: slide 4s linear infinite;
+  }
+
+  .delay1 {
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+  }
+  .delay2 {
+    -webkit-animation-delay: 2s;
+    animation-delay: 2s;
+  }
+  .delay3 {
+    -webkit-animation-delay: 3s;
+    animation-delay: 3s;
+  }
+
+  @keyframes image {
+    0% {
+      opacity: 0;
     }
-
-    @-webkit-keyframes slide-right {
-      0% {
-        -webkit-transform: translateX(0);
-                transform: translateX(0);
-      }
-      100% {
-        -webkit-transform: translateX(100px);
-                transform: translateX(100px);
-      }
+    100% {
+      opacity: 1;
     }
-    @keyframes slide-right {
-      0% {
-        -webkit-transform: translateX(0);
-                transform: translateX(0);
-      }
-      100% {
-        -webkit-transform: translateX(100px);
-                transform: translateX(100px);
-      }
+  }
+
+  @-webkit-keyframes slide {
+    0% {
+      opacity: 0;
+      transform: translateX(9vw);
     }
-    
-
-    @keyframes image{
-      0%   { opacity : 0; }
-      100% { opacity: 1; }
+    20% {
+      opacity: 1;
+      transform: translateX(5vw);
     }
-
-    @media(max-width: 500px){
-
-        .landing-container{
-            display: block;
-            height: 70vh;
-            width: 100vw;
-        }
-
-        .landing-about-container{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100vw;
-            height: 400px;
-        }
-
-        .landing-name{
-          font-size: 50px;
-        }
-
-        .landing-title{
-            font-size: 35px;
-            padding-bottom: 50px;
-        }
-
-        .landing-about{
-           width: 300px;
-           display: none;
-        }
-
-        #landing-learn-more{
-            position: absolute;
-            font-size: 20px;
-            width: 100vw;
-            margin-left: -20px;
-            color: orange;
-            bottom: 0;
-            z-index: 1;
-        }
-
-        .landing-portrait{
-            height: 500px;
-            width: 325px;
-            padding-left: 50px;
-            background-image: url('./IMG_5638.JPG');
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-            position: absolute;
-            bottom: 0;
-            z-index: 0;
-            animation-name: image;
-            animation-duration:4s;
-        }
-
-        .arrowSliding {
-            position: absolute;
-            margin-left: 30px;
-            -webkit-animation: slide 4s linear infinite; 
-                    animation: slide 4s linear infinite;
-          }
-          
-          .delay1 {
-            -webkit-animation-delay: 1s; 
-              animation-delay: 1s;
-          }
-          .delay2 {
-            -webkit-animation-delay: 2s; 
-              animation-delay: 2s;
-          }
-          .delay3 {
-            -webkit-animation-delay: 3s; 
-              animation-delay: 3s;
-          }
-
-          @keyframes image{
-            0%   { opacity : 0; }
-            100% { opacity: 1; }
-          }
-
-        @-webkit-keyframes slide {
-            0% { opacity:0; transform: translateX(9vw); }  
-           20% { opacity:1; transform: translateX(5vw); }   
-           80% { opacity:1; transform: translateX(-5vw); }  
-          100% { opacity:0; transform: translateX(-9vw); } 
-        }
-        @keyframes slide {
-            0% { opacity:0; transform: translateX(9vw); }  
-           20% { opacity:1; transform: translateX(5vw); }   
-           80% { opacity:1; transform: translateX(-5vw); }  
-          100% { opacity:0; transform: translateX(-9vw); } 
-        }
-
-        @-webkit-keyframes slide-in-left {
-        }
-        @keyframes slide-in-left {
-        }
-
-        @keyframes strike{
-        }
-
-        @-webkit-keyframes slide-right {
-
-        }
-        @keyframes slide-right {
-
-        }
-
+    80% {
+      opacity: 1;
+      transform: translateX(-5vw);
     }
+    100% {
+      opacity: 0;
+      transform: translateX(-9vw);
+    }
+  }
+  @keyframes slide {
+    0% {
+      opacity: 0;
+      transform: translateX(9vw);
+    }
+    20% {
+      opacity: 1;
+      transform: translateX(5vw);
+    }
+    80% {
+      opacity: 1;
+      transform: translateX(-5vw);
+    }
+    100% {
+      opacity: 0;
+      transform: translateX(-9vw);
+    }
+  }
 
+  @-webkit-keyframes slide-in-left {
+    0% {
+      -webkit-transform: translateX(-1000px);
+      transform: translateX(-1000px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  @keyframes slide-in-left {
+    0% {
+      -webkit-transform: translateX(-1000px);
+      transform: translateX(-1000px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+}
