--- a/src/Components/Landing/landing.css
+++ b/src/Components/Landing/landing.css
@@ -34,8 +34,8 @@
   justify-content: flex-start;
   background-color: white;
   flex-wrap: wrap;
-  -webkit-animation: slide-in-left 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation: slide-in-left 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  /* -webkit-animation: slide-in-left 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-in-left 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; */
 }
 .landing-name {
   font-size: 60px;
@@ -162,9 +162,9 @@ a {
     justify-content: center;
     width: 100vw;
     height: 400px;
-    -webkit-animation: slide-in-left 2s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+    /* -webkit-animation: slide-in-left 2s cubic-bezier(0.25, 0.46, 0.45, 0.94)
       both;
-    animation: slide-in-left 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+    animation: slide-in-left 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; */
   }
 
   .landing-name {
