--- a/src/Components/Portfolio/Hooligin Music/hooliginweb.css
+++ b/src/Components/Portfolio/Hooligin Music/hooliginweb.css
@@ -102,7 +102,7 @@ h4 {
 }
 
 #next-project{
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     color: orange;
     font-size: 25px;
     font-weight: 600;
@@ -117,11 +117,12 @@ h4 {
 @media(max-width: 500px){
 
     .hooligin-web-info-container{
-        height: auto;
+        height: 90vh;
         width: 90vw;
         text-align: start;
         word-wrap: break-word;
         padding-left: 20px;
+        padding-bottom: 40px;
     }
 
     .hooligin-web-info-container p{
@@ -196,4 +197,5 @@ h4 {
 #next-project{
     margin-bottom: 20px;
     color: orange;
+    height: 100px;
 }
