--- a/src/Components/Portfolio/portfolio.css
+++ b/src/Components/Portfolio/portfolio.css
@@ -46,6 +46,7 @@
   font-size: 25px;
   margin-top: -10px;
   color: orange;
+  font-weight: 600;
 }
 
 #learn-more:hover{
@@ -109,18 +110,17 @@
 } */
 
 .the-drop-container{
-    width: 90vw;
-    height: 33vh;
-    display: flex;
-    flex-direction: row;
-    text-align: start;
-    justify-content:flex-start;
-    padding-left: 50px;
-    margin-bottom: 20px;
-    box-shadow: 5px 10px 18px #888888;
-    -webkit-animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-      animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-      animation-delay: 300ms;
+  width: 93vw;
+  height: 70vh;
+  display: flex;
+  flex-direction: row;
+  text-align: start;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  margin-bottom: 40px;
+  box-shadow: 5px 10px 18px #888888;
+  -webkit-animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 #next-project{
@@ -211,27 +211,47 @@
   @media(max-width: 500px){
 
     .hooligin-web-project{
-      /* width: 300px; */
+      /* width: 200px;
       padding-left: 350px;
       display: flex;
+      align-items: center; */
+      height: 40vh;
+      /* padding-left: 150px; */
+      /* display: flex;
       align-items: center;
+      justify-content: center; */
     }
 
-    .hooligin-web-image-container{
+    .project-specs-container{
+      height: 40vh;
+      width: 90vw;
+      text-align: start;
       display: flex;
+      align-items: center;
+      justify-content: center;
       flex-direction: column;
+      padding-left: 150px;
+    }
+    
+    .hooligin-web-image-container{
+      display: none;
+      /* flex-direction: column;
       margin-left: 40px;
       margin-top: -20px;
       height: 350px;
-      padding-bottom: 20px;
+      padding-bottom: 20px; */
     }
+    
 
     .the-drop-container{
       height: 40vh;
     }
 
     .the-drop-specs-container{
-      text-align: start;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .the-drop-container iframe{
