--- a/src/Components/Portfolio/portfolio.css
+++ b/src/Components/Portfolio/portfolio.css
@@ -211,19 +211,11 @@
   @media(max-width: 500px){
 
     .hooligin-web-project{
-      /* width: 200px;
-      padding-left: 350px;
-      display: flex;
-      align-items: center; */
-      height: 40vh;
-      /* padding-left: 150px; */
-      /* display: flex;
-      align-items: center;
-      justify-content: center; */
+      height: auto;
     }
 
     .project-specs-container{
-      height: 40vh;
+      height: auto;
       width: 90vw;
       text-align: start;
       display: flex;
@@ -235,19 +227,16 @@
     
     .hooligin-web-image-container{
       display: none;
-      /* flex-direction: column;
-      margin-left: 40px;
-      margin-top: -20px;
-      height: 350px;
-      padding-bottom: 20px; */
+
     }
     
 
     .the-drop-container{
-      height: 40vh;
+      height: auto;
     }
 
     .the-drop-specs-container{
+      height: auto;
       text-align: center;
       display: flex;
       align-items: center;
