--- a/src/Components/Portfolio/portfolio.css
+++ b/src/Components/Portfolio/portfolio.css
@@ -208,7 +208,7 @@
     }
   }
 
-  @media(max-width: 500px){
+  @media only screen and (max-width: 500px){
 
     .hooligin-web-project{
       height: auto;
