--- a/src/Components/Portfolio/Hooligin Music/hooliginweb.css
+++ b/src/Components/Portfolio/Hooligin Music/hooliginweb.css
@@ -123,6 +123,7 @@ h4 {
         word-wrap: break-word;
         padding-left: 20px;
         padding-bottom: 40px;
+        margin-bottom: 20px;
     }
 
     .hooligin-web-info-container p{
