portfolio css mobile adjustments

--- a/src/Components/Landing/landing.css
+++ b/src/Components/Landing/landing.css
@@ -10,7 +10,7 @@
 }
 
 .landing-portrait {
-  height: 90vh;
+  height: 750px;
   width: 600px;
   background-color: aliceblue;
   background-image: url("./IMG_5638.JPG");
