--- a/src/Components/Portfolio/Hooligin Music/hooliginweb.css
+++ b/src/Components/Portfolio/Hooligin Music/hooliginweb.css
@@ -33,6 +33,7 @@
 .hooligin-web-gallery{
     width: 100vw;
     height: auto;
+    margin-top: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
