--- a/src/Components/Portfolio/portfolio.css
+++ b/src/Components/Portfolio/portfolio.css
@@ -220,13 +220,23 @@
     }
     
     .hooligin-web-project{
-      height: auto;
+      width: 93vw;
+      height: 400px;
+      display: flex;
+      flex-direction: row;
+      text-align: start;
+      align-items: center;
+      justify-content: space-evenly;
+      margin-bottom: 40px;
+      box-shadow: 5px 10px 18px #888888;
+      -webkit-animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
       contain: content;
-    }
+  }
 
     .project-specs-container{
       height: auto;
-      /* width:90vw; */
+      width:90vw;
       text-align: start;
       display: flex;
       align-items: center;
@@ -242,8 +252,18 @@
     
 
     .the-drop-container{
-      height: auto;
-      contain: content;
+      width: 93vw;
+      height: 400px;
+      display: flex;
+      flex-direction: row;
+      text-align: start;
+      align-items: flex-start;
+      justify-content: space-evenly;
+      margin-bottom: 40px;
+      box-shadow: 5px 10px 18px #888888;
+      -webkit-animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        contain: content;
     }
 
     .the-drop-specs-container{
