--- a/src/Components/Portfolio/portfolio.css
+++ b/src/Components/Portfolio/portfolio.css
@@ -221,11 +221,11 @@
     
     .hooligin-web-project{
       width: 93vw;
-      height: 400px;
+      height: 500px;
       display: flex;
       flex-direction: row;
       text-align: start;
-      align-items: center;
+      align-items: flex-end;
       justify-content: space-evenly;
       margin-bottom: 40px;
       box-shadow: 5px 10px 18px #888888;
@@ -235,7 +235,7 @@
   }
 
     .project-specs-container{
-      height: auto;
+      height: 600px;
       width:90vw;
       text-align: start;
       display: flex;
@@ -253,7 +253,7 @@
 
     .the-drop-container{
       width: 93vw;
-      height: 400px;
+      height: 500px;
       display: flex;
       flex-direction: row;
       text-align: start;
@@ -267,11 +267,11 @@
     }
 
     .the-drop-specs-container{
-      height: auto;
-      text-align: center;
+      height: 400px;
+      /* text-align: center;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: center; */
     }
 
     .the-drop-container iframe{
