--- a/src/Components/Portfolio/portfolio.css
+++ b/src/Components/Portfolio/portfolio.css
@@ -69,12 +69,6 @@
     margin-top: 50px;
 }
 
-/* .hooligin-web-image:hover{
-    cursor: pointer;
-    position: relative;
-    transform-origin: center;
-    animation: scale 500ms ease-in-out forwards;
-} */
 
 .hooligin-web-image2{
     height: 250px;
@@ -86,12 +80,6 @@
     margin-top: 50px;
 }
 
-/* .hooligin-web-image2:hover{
-    cursor: pointer;
-    position: relative;
-    transform-origin: center;
-    animation: scale 500ms ease-in-out forwards;
-} */
 
 .hooligin-web-image3{
     height: 250px;
@@ -103,12 +91,6 @@
     margin-top: 50px;
 }
 
-/* .hooligin-web-image3:hover{
-    cursor: pointer;
-    position: relative;
-    transform-origin: right center;
-    animation: scale 500ms ease-in-out forwards;
-} */
 
 .the-drop-container{
   width: 93vw;
@@ -134,9 +116,6 @@
   cursor: pointer;
 }
 
-.project-specs-container{
-
-}
 
 .the-drop-container iframe{
     margin-left: 40px;
@@ -178,13 +157,6 @@
     }
   }
   
-
- /* @keyframes scale {
-        to {
-            transform: scale(2);
-        }
-  } */
-
   @-webkit-keyframes slide-in-bottom {
     0% {
       -webkit-transform: translateY(1000px);
@@ -221,17 +193,17 @@
     
     .hooligin-web-project{
       width: 93vw;
-      height: 500px;
+      height: 300px;
       display: flex;
       flex-direction: row;
       text-align: start;
-      align-items: flex-end;
+      align-items: center;
       justify-content: space-evenly;
       margin-bottom: 40px;
       box-shadow: 5px 10px 18px #888888;
       -webkit-animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
         animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-      contain: content;
+      box-sizing: border-box;
   }
 
     .project-specs-container{
@@ -264,15 +236,9 @@
       -webkit-animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
         animation: slide-in-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
         contain: content;
+        box-sizing: border-box;
     }
 
-    .the-drop-specs-container{
-      height: 400px;
-      /* text-align: center;
-      display: flex;
-      align-items: center;
-      justify-content: center; */
-    }
 
     .the-drop-container iframe{
       display: none;
