--- a/src/Components/Portfolio/Hooligin Music/hooliginweb.css
+++ b/src/Components/Portfolio/Hooligin Music/hooliginweb.css
@@ -201,3 +201,110 @@ h4 {
     color: orange;
     height: 100px;
 }
+
+/* IPAD QUERIE */
+
+@media(max-width: 768px){
+
+    .hooligin-web-container{
+        height: auto;
+        width: 100vw;
+        font-family: Karla;
+    }
+    
+    
+    .hooligin-web-info-container{
+        height: auto;
+        width: 90vw;
+        text-align: start;
+        word-wrap: break-word;
+        padding-left: 50px;
+    }
+    
+    
+    .hooligin-web-gallery{
+        width: 100vw;
+        height: auto;
+        margin-top: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    
+    h4 {
+        text-align: start;
+    }
+    
+    .hooligin-web-img{
+        width: 90vw;
+        height: 80vh;
+        background-image: url('../Screen\ Shot\ 2020-09-10\ at\ 7.05.23\ PM.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-bottom: 40px;
+        box-shadow: 5px 10px 18px #888888;
+    }
+    .hooligin-web-img2{
+        width: 90vw;
+        height: 80vh;
+        background-image: url('../Screen\ Shot\ 2020-09-09\ at\ 7.25.23\ PM.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-bottom: 40px;
+        box-shadow: 5px 10px 18px #888888;
+    }
+    .hooligin-web-img3{
+        width: 90vw;
+        height: 80vh;
+        background-image: url('../Screen\ Shot\ 2020-09-10\ at\ 7.03.33\ PM.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-bottom: 40px;
+        box-shadow: 5px 10px 18px #888888;
+    }
+    
+    .hooligin-web-img4{
+        width: 90vw;
+        height: 80vh;
+        background-image: url('../Screen\ Shot\ 2020-09-10\ at\ 6.58.29\ PM.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-bottom: 40px;
+        box-shadow: 5px 10px 18px #888888;
+    }
+    
+    .hooligin-web-img5{
+        width: 90vw;
+        height: 80vh;
+        background-image: url('../Screen\ Shot\ 2020-09-10\ at\ 7.05.01\ PM.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-bottom: 40px;
+        box-shadow: 5px 10px 18px #888888;
+    }
+    
+    .hooligin-web-img6{
+        width: 90vw;
+        height: 80vh;
+        background-image: url('../Screen\ Shot\ 2020-09-10\ at\ 7.06.02\ PM.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin-bottom: 20px;
+        box-shadow: 5px 10px 18px #888888;
+    }
+    
+    #next-project{
+        margin-bottom: 40px;
+        color: orange;
+        font-size: 25px;
+        font-weight: 600;
+    }
+    
+}
