--- a/src/Components/Portfolio/The Drop/drop.css
+++ b/src/Components/Portfolio/The Drop/drop.css
@@ -39,3 +39,18 @@
         border-radius: 3%;
     }
 }
+
+/* IPAD QUERIE  */
+
+@media(max-width: 768px){
+    
+    .drop-about-bio{
+        width: 90vw;
+    }
+
+    #episode{
+        width: 90vw;
+        height: 152px;
+        border-radius: 3%;
+    }
+}
